# notare

./: README.md  pyproject.toml
src/music_score_sk/: __init__.py  analyze.py  cli.py  converter.py  extract.py  metadata.py  show.py  transpose.py  utils.py
src/notare/: analyze.py  cli.py  converter.py  extract.py  insert.py  metadata.py  play.py  show.py  simplify.py  transpose.py  utils.py
tests/: cli_tests.md  conftest.py  test_analyze.py  test_cli_integration.py  test_converter.py  test_extract.py  test_insert.py  test_metadata.py  test_set_part_metadata.py  test_simplify.py  test_transpose.py  test_utils.py
tests/data/: c_scale.abc  c_scale.ly  c_scale.musicxml  c_scale_basic.musicxml
