[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Notare"
version = "0.1.1"
description = "A swiss knife music utility for handling music score files in the command line."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "David Issa Mattos" }
]
dependencies = [
  "fire>=0.6",
  "music21>=9.0",
]

[project.scripts]
notare = "notare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
notare = []

[tool.pytest.ini_options]
testpaths = ["tests"]
